[package]
name = "images-processor-service"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = "4.4"
tokio = { version = "1.34", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
image = { version = "0.24", features = ["webp-encoder", "libwebp", "webp"] }
libwebp = "0.1"
base64 = "0.21"
flume = "0.11"